feat: initial kanagawa

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -125,6 +125,7 @@
 @import 'color-schemes/dracula';
 @import 'color-schemes/everforest';
 @import 'color-schemes/gruvbox';
+@import 'color-schemes/kanagawa';
 @import 'color-schemes/macos';
 @import 'color-schemes/nord';
 @import 'color-schemes/notion';
